--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
     "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "moment": "^2.29.1",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.28.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.3.2",
